--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,12 @@
 		    <version>2.3.1</version>
 		</dependency>
 				
+		<!-- json-simple -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
 				
 		
 		
