--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -50,5 +50,22 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>                 
 	</filter-mapping>
-
+	
+	<error-page>
+      <error-code>404</error-code>
+      <location>/WEB-INF/views/error/errorPage.jsp</location>
+  	</error-page>
+  	<error-page>
+      <error-code>405</error-code>
+      <location>/WEB-INF/views/error/errorPage.jsp</location>
+  	</error-page>
+  	<error-page>
+      <error-code>406</error-code>
+      <location>/WEB-INF/views/error/errorPage.jsp</location>
+  	</error-page>
+  	<error-page>
+      <error-code>407</error-code>
+      <location>/WEB-INF/views/error/errorPage.jsp</location>
+  	</error-page>
+  	
 </web-app>
