--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -67,5 +67,9 @@
       <error-code>407</error-code>
       <location>/WEB-INF/views/error/errorPage.jsp</location>
   	</error-page>
+  	<error-page>
+      <error-code>500</error-code>
+      <location>/WEB-INF/views/error/errorPage.jsp</location>
+  	</error-page>
   	
 </web-app>
